--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".registroActivity"
     android:background="@drawable/fondo_login">
+    <ImageButton
+        android:id="@+id/btnAtras"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_atras"
+        android:background="@android:color/transparent"
+        android:tint="@color/white"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ScrollView
         android:layout_width="0dp"
@@ -39,7 +50,8 @@
                 android:inputType="textPersonName"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
@@ -56,7 +68,8 @@
                 android:inputType="textPassword"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
@@ -73,7 +86,8 @@
                 android:inputType="textPassword"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
@@ -90,7 +104,8 @@
                 android:inputType="textPersonName"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
@@ -107,7 +122,8 @@
                 android:inputType="textPersonName"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
@@ -124,53 +140,140 @@
                 android:inputType="textEmailAddress"
                 android:textColorHint="@color/transwhite"
                 android:textColor="@color/white"
-                android:textSize="15dp"
+                android:textSize="13dp"
+                android:paddingTop="0dp"
                 android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EDAD"
+                android:text="SEXO"
                 android:textColor="@color/white"
                 android:textStyle="bold"/>
-            <EditText
-                android:id="@+id/etEdad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp"/>
 
-            <TextView
+            <RadioGroup
+                android:id="@+id/rgSexo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ALTURA (m)"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
-            <EditText
-                android:id="@+id/etAltura"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp"/>
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="10dp">
 
-            <TextView
+                <RadioButton
+                    android:id="@+id/rbMasculino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Masculino"
+                    android:textSize="13dp"
+                    android:textColor="@color/white"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"/>
+
+                <RadioButton
+                    android:id="@+id/rbFemenino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Femenino"
+                    android:textSize="13dp"
+                    android:textColor="@color/white"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"/>
+
+                <RadioButton
+                    android:id="@+id/rbNoDecir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prefiero no decirlo"
+                    android:textSize="13dp"
+                    android:textColor="@color/white"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"/>
+            </RadioGroup>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PESO (kg)"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
-            <EditText
-                android:id="@+id/etPeso"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp"/>
+                android:orientation="horizontal"
+                android:weightSum="3"
+                android:layout_marginBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingEnd="5dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Edad"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:gravity="center"/>
+
+                    <EditText
+                        android:id="@+id/etEdad"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingEnd="5dp"
+                    android:paddingStart="5dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Peso (kg)"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:gravity="center"/>
+
+                    <EditText
+                        android:id="@+id/etPeso"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:paddingStart="5dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Altura (m)"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:gravity="center"/>
+
+                    <EditText
+                        android:id="@+id/etAltura"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:gravity="center"/>
+                </LinearLayout>
+
+            </LinearLayout>
 
 
             <TextView
@@ -191,6 +294,14 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/white"/>
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Acepto los términos y condiciones y la política de privacidad de Cibertec"
+                android:layout_margin="16dp"
+                android:textColor="@color/white"
+                android:textSize="12dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
