--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="transwhite">#B3FFFFFF</color>
     <color name="azul">#004AC9</color>
     <color name="rojo">#BA0000</color>
+    <color name="rojoOscuro">#7A0000</color>
+    <color name="rojoPastel">#FAA0A0</color>
+    <color name="gris">#C4C4C4</color>
+    <color name="verde">#14E300</color>
+    <color name="celeste">#97DBE8</color>
 </resources>
