--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_atras"
         android:background="@android:color/transparent"
-        android:tint="@color/white"
+        app:tint="@color/white"
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
             android:orientation="vertical"
             android:background="@color/transblack"
             android:gravity="center"
-            android:padding="30dp">
+            android:padding="50dp">
 
             <TextView
                 android:layout_width="match_parent"
